--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <meta name="og:description" content="Authentic mediterranean cuisine in Chicago."/>
     <meta name="og:image" content="%PUBLIC_URL%/little-lemon-og.png"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Markazi+Text:wght@400..700&display=swap');
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
