--- a/public/index.html
+++ b/public/index.html
@@ -9,38 +9,35 @@
     <meta name="og:title" content="Little Lemon"/>
     <meta name="og:description" content="Authentic mediterranean cuisine in Chicago."/>
     <meta name="og:image" content="%PUBLIC_URL%/little-lemon-og.png"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Markazi+Text:wght@400..700&display=swap');
     </style>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script> -->
+    <script src="%PUBLIC_URL%/api.js"></script>
+    <!-- This gets blocked by the browser when trying to run it, rather -->
+    <!-- than try to fix something I can't fix I've included the script -->
+    <!-- as api.js and left everything as it was (using async etc). -->
+    <!-- I have added a script below to attach it to window since it seems -->
+    <!-- to have issues with scope. t-morris -->
+    <script>
+      // Wait for api.js to run, then attach to window
+      window.addEventListener("load", () => {
+        if (typeof fetchAPI === "function" && !window.fetchAPI) {
+          window.fetchAPI = fetchAPI;
+        }
+        if (typeof submitAPI === "function" && !window.submitAPI) {
+          window.submitAPI = submitAPI;
+        }
+      });
+    </script>
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
