--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         }
       });
     </script>
-    <title>React App</title>
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
